...
      ],
      priority: 22,
    ),
    const SampleImageCategory(
      id: 'furniture_dining_living_tables',
      industry: 'Phòng ăn & Bếp',
      name: 'Bàn ăn mặt đá cẩm thạch chống xước & Bàn trà sofa, Bàn cafe',
      imageUrl:
          'https://images.unsplash.com/photo-1617806118233-18e1de247200?w=600&auto=format&fit=crop&q=80',
      keywords: [
        'ban an 4 ghe mat da',
        'bàn ăn 4 ghế mặt đá',
        'ban an 4 ghe',
...
